fixing my image not showing on mobile

--- a/css/box2.css
+++ b/css/box2.css
@@ -10,14 +10,14 @@
 .box2 h2{
     font-size: 12px;
     color: #1c1c1c;
-    padding: 30px 30px 60px 30px;
+    padding: 30px 30px 20px 30px;
     background:white;
 }
-@media only screen and (min-width: 700px) {
+@media screen and (min-width: 700px) {
     .box2{
         background-color: white;
     }
     .box2b{
-display: none;
+        display: none;
     }
    }
