--- a/css/reset.css
+++ b/css/reset.css
@@ -43,7 +43,7 @@ table {
 	border-spacing: 0;
 }
 .dividerbox{
-	height: 15vh;
+	height: 5vh;
 	background: white;
 	padding-top: 5vh;
 }
@@ -55,7 +55,7 @@ table {
 	margin: auto;
  }
 
-@media only screen and (min-width: 700px) {
+@media screen and (min-width: 700px) {
 	.site-content {
 		max-width: 700px;
 		margin: auto;
