--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -1,6 +1,5 @@
-@media only screen and (max-width: 700px) {
+@media screen and (max-width: 700px) {
   .site-content {
-    max-width: none;
     margin: unset;
   }
   .body{
